# Prism

./: .env.example  .gitignore  AGENTS.md  COPY-PASTE-FIRST-CODEX-PROMPT.md  README-START-HERE.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  railway.toml  sandbox-demo.html  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a27c8a345abc_clerk_auth_identifiers.py  b8f5a8d1c2e7_expand_assignment_sandbox_types.py  d4dfa1e52e29_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/dependencies/: __init__.py  auth.py
backend/app/api/routes/: domain.py  personalization.py  profiles.py  sessions.py
backend/app/core/: config.py  errors.py
backend/app/db/: session.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: domain.py  personalization.py  profiles.py  sessions.py
backend/app/scripts/: seed_demo.py
backend/app/services/: domain.py  feedback.py  hints.py  jwt.py  mission.py  personalization.py  profiles.py  sandbox.py
backend/tests/: conftest.py  test_domain_personalization_sessions.py  test_foundation.py
codex-tasks/: 00-repository-assessment.md  01-backend-foundation.md  02-core-domain-api.md  03-personalization-and-start.md  04-sessions-hints-submissions.md  05-hardening-deployment-demo.md
contracts/: sandbox-spec.schema.json
docs/: api-contracts.md  architecture-plan.md  codex-workflow.md  database-schema.md  product-context.md  (+3 more)
(+54 files in other folders)
